--- a/style.css
+++ b/style.css
@@ -51,3 +51,51 @@ header > .container{
     cursor: pointer;
     z-index: 999;
 }
+
+.hamburger-menu svg{
+    font-size: 30px;
+    color: rgba(198, 153, 99, 0.7);
+    margin: auto;
+}
+
+.hamburger-menu .fa-times{
+    display: none;
+}
+
+.hamburger-menu .fa-times.open{
+    display: block;
+}
+
+.hamburger-menu .fa-bars.open{
+    display: none;
+}
+
+.nav-list{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    list-style: none;
+    background-color: #101D2C;
+    z-index: 900;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    opacity: 0;
+    transform: scale(0);
+    transition: opacity 650ms;
+}
+
+.nav-list.open{
+    opacity: 1;
+    transform: scale(1);
+}
+
+.hero-text{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -45%);
+    text-align: center;
+}
