--- a/style.css
+++ b/style.css
@@ -99,3 +99,31 @@ header > .container{
     transform: translate(-50%, -45%);
     text-align: center;
 }
+
+.hero-text h1{
+    font-family: "Niconne", cursive;
+    color: #c69963;
+}
+
+.btn{
+    width: 100px;
+    padding: 5px 0 !important;
+    border: 1px solid #c69963;
+    position: relative;
+    overflow: hidden;
+}
+
+.btn::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(120deg, transparent, rgba(255,255,255,0.3), transparent);
+    transition: all 650ms;
+}
+
+.btn:hover::before{
+    left: 100%;
+}
